add base setting

--- a/src/chat.html
+++ b/src/chat.html
@@ -374,7 +374,7 @@
             return params.get(name) || '';
         }
 
-        new Vue({
+        window.chatApp = new Vue({
             el: '#app',
             data: {
                 start_time: 0,
